--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.0",
     "react-useinterval": "^1.0.2",
     "sass": "^1.29.0",
+    "sass-loader": "^12.1.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
